# ProGen-tauri

./: .gitignore  AGENTS.md  CLAUDE.md  PROMPT_CHANGES.md  dev.bat  package-lock.json  package.json  start.bat  vite.config.mjs
.github/workflows/: release.yml
scripts/: check-security-regression.mjs
src/: index.html
src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: progen.css
src/js/: progen-admin.js  progen-check-simple.js  progen-check-variation.js  progen-comicpot.js  progen-data.js  progen-extraction.js  progen-json-browser.js  progen-landing.js  progen-main.js  progen-note-txt.js  progen-proofreading.js  progen-result-viewer.js  progen-state.js  progen-viewer.js  progen-xml-gen.js  progen-xml-templates.js  tauri-bridge.js
