[package]
name = "progen"
version = "1.8.6"
description = "テキスト抽出・成形プロンプトジェネレータ"
authors = []
edition = "2021"

[lib]
name = "progen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "bmp", "gif"] }
base64 = "0.22"

# dev時でも依存クレート（画像処理等）は最適化する
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
